# student-manager

./: CMakeLists.txt
include/: student_manager.hpp
src/: CMakeLists.txt  main.cpp  student_manager.cpp
